# yeegliht-vibe-control-cfgs

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
adapters/claude-code/: README.md  hooks.js  hooks.py  settings.json  setup.py
adapters/pi-agent/: README.md  index.ts
bridge/: bulbs.json  bulbs.json.example  cube_fonts.py  cube_patterns.py  setup.py  yeelight_bridge.py  yeelight_cube_lite.py  yeelight_discover.py  yeelight_relay.py
claude-hook/: README.md  bulbs.json  hooks.py  settings.json  setup.py
docs/: cube-lite-pixel-art.md
pi-agent/: README.md  index.ts  yeelight_ctl.py  yeelight_relay.py
yeelight_vibe_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
