[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yeelight-vibe-bridge"
version = "2.0.0"
description = "Real-time AI agent status lighting for Yeelight smart bulbs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Yeelight Vibe Bridge contributors"}]
dependencies = [
    "yeelight",
]

[project.optional-dependencies]
cube = ["zeroconf"]

[project.scripts]
yeelight-bridge = "bridge.yeelight_bridge:main"

[tool.setuptools.packages.find]
include = ["bridge*"]
